fix: center copyright text on mobile

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -88,6 +88,10 @@
 
 .copyright {
   font-weight: 700;
+
+  @include mobile {
+    text-align: center;
+  }
 }
 
 .copyright-social-media-container {
